[package]
name = "evm-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = { version = "0.4", default-features = false, features = [ "alloc" ]  }
#evm = { version = "0.37.0", default-features = false, features = ["with-serde"]}
evm = { path = "../../evm", default-features = false, features = ["with-serde"]}
primitive-types =  { version = "0.12.0", default-features = false }
serde = { version = "1.0", default-features = false }
#serde = { version = "1.0"}
#ethjson = { path = "../../evm-tests/ethjson" }