[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = "0.12"
serde = "1.0"
hex = { version = "0.4" }
evm-runner = { path = "../evm-runner" }
primitive-types =  { version = "0.12.0", default-features = false }
evm = { path = "../../evm", default-features = false, features = ["with-serde"]}
